Bug 96726 - Fails to build with openssl 1.1.0
Summary: Fails to build with openssl 1.1.0
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: build-system (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL: https://bugs.debian.org/cgi-bin/bugre...
Whiteboard:
Keywords:
Depends on:
Blocks: 96750
  Show dependency treegraph
 
Reported: 2016-06-29 14:47 UTC by Felipe Sateler
Modified: 2016-11-04 14:34 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
failed build log (1.02 MB, text/plain)
2016-06-29 14:47 UTC, Felipe Sateler
Details

Description Felipe Sateler 2016-06-29 14:47:17 UTC
Created attachment 124778 [details]
failed build log

Forwarded from the debian bug tracker by Kurt Roeckx:

OpenSSL 1.1.0 is about to released.  During a rebuild of all packages using
OpenSSL this package fail to build.  A log of that build can be found at:
https://breakpoint.cc/openssl-1.1-rebuild-2016-05-29/Attempted/pulseaudio_8.0-2_amd64-20160529-1512

On https://wiki.openssl.org/index.php/1.1_API_Changes you can see various of the
reasons why it might fail.  There are also updated man pages at
https://www.openssl.org/docs/manmaster/ that should contain useful information.

There is a libssl-dev package available in experimental that contains a recent
snapshot, I suggest you try building against that to see if everything works.

If you have problems making things work, feel free to contact us.

== 

I looked a bit into this and the problem appears to be mainly direct use of struct members, and the structs are supposed to be opaque now.

I'm attaching the build log just in case the original disappears.
Comment 1 Tanu Kaskinen 2016-06-30 16:30:47 UTC
Marking this as a 10.0 blocker.
Comment 2 Tanu Kaskinen 2016-09-10 13:41:15 UTC
Fix submitted:
https://patchwork.freedesktop.org/patch/109908/
Comment 3 Tanu Kaskinen 2016-11-03 12:33:22 UTC
Fix v2 submitted:
https://patchwork.freedesktop.org/patch/119805/
Comment 4 Tanu Kaskinen 2016-11-04 14:17:47 UTC
Fix v3 submitted:
https://patchwork.freedesktop.org/patch/119923/


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.